# firmware-investigate

./: .editorconfig  .gitignore  CONTRIBUTING.md  E2E_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup-uv.sh  setup.py  tox.ini  uv.toml
.github/workflows/: ci.yml
docs/: USB_GADGET_USAGE.md
scripts/: find_fcc_info.py
src/firmware_investigate/: __init__.py  analyzer.py  base_runner.py  cli.py  e2e.py  fcc_lookup.py  firmware_addon.py  macos_runner.py  mitmproxy_manager.py  usb_gadget.py  virtualbox_runner.py  wine_runner.py
src/firmware_investigate/downloaders/: __init__.py  base.py  cardo.py  motorola.py  sena.py
tests/: test_analyzer.py  test_base_downloader.py  test_base_runner.py  test_cardo_downloader.py  test_fcc_lookup.py  test_init.py  test_macos_runner.py  test_mitmproxy_manager.py  test_motorola_downloader.py  test_sena_downloader.py  test_usb_gadget.py  test_virtualbox_runner.py  test_wine_runner.py
working/: README.md
